--- a/inventory/inet/hosts.ini
+++ b/inventory/inet/hosts.ini
@@ -12,7 +12,7 @@ node7 ansible_host=10.198.177.135
 node8 ansible_host=10.198.177.136
 
 # ## configure a bastion host if your nodes are not directly reachable
-# bastion ansible_host=x.x.x.x ansible_user=some_user
+# bastion ansible_host=192.168.103.156 ansible_user=root
 
 [kube-master]
 node1
