--- a/inventory/ibm-cloud/group_vars/k8s-cluster/addons.yml
+++ b/inventory/ibm-cloud/group_vars/k8s-cluster/addons.yml
@@ -7,23 +7,23 @@ helm_enabled: true
 
 # Registry deployment
 registry_enabled: true
-# registry_namespace: kube-system
-# registry_storage_class: ""
-# registry_disk_size: "10Gi"
+registry_namespace: kube-system
+registry_storage_class: "local-storage"
+registry_disk_size: "5Gi"
 
 # Metrics Server deployment
-metrics_server_enabled: false
-# metrics_server_kubelet_insecure_tls: true
-# metrics_server_metric_resolution: 60s
-# metrics_server_kubelet_preferred_address_types: "InternalIP"
+metrics_server_enabled: true
+metrics_server_kubelet_insecure_tls: true
+metrics_server_metric_resolution: 60s
+metrics_server_kubelet_preferred_address_types: "InternalIP"
 
 # Local volume provisioner deployment
 local_volume_provisioner_enabled: true
-# local_volume_provisioner_namespace: kube-system
-# local_volume_provisioner_storage_classes:
-#   local-storage:
-#     host_dir: /mnt/disks
-#     mount_dir: /mnt/disks
+local_volume_provisioner_namespace: kube-system
+local_volume_provisioner_storage_classes:
+  local-storage:
+    host_dir: /mnt/disks
+    mount_dir: /mnt/disks
 #   fast-disks:
 #     host_dir: /mnt/fast-disks
 #     mount_dir: /mnt/fast-disks
@@ -35,15 +35,15 @@ local_volume_provisioner_enabled: true
 
 # CephFS provisioner deployment
 cephfs_provisioner_enabled: false
-# cephfs_provisioner_namespace: "cephfs-provisioner"
-# cephfs_provisioner_cluster: ceph
-# cephfs_provisioner_monitors: "172.24.0.1:6789,172.24.0.2:6789,172.24.0.3:6789"
-# cephfs_provisioner_admin_id: admin
-# cephfs_provisioner_secret: secret
-# cephfs_provisioner_storage_class: cephfs
-# cephfs_provisioner_reclaim_policy: Delete
-# cephfs_provisioner_claim_root: /volumes
-# cephfs_provisioner_deterministic_names: true
+cephfs_provisioner_namespace: "cephfs-provisioner"
+cephfs_provisioner_cluster: ceph
+cephfs_provisioner_monitors: "172.24.0.1:6789,172.24.0.2:6789,172.24.0.3:6789"
+cephfs_provisioner_admin_id: admin
+cephfs_provisioner_secret: secret
+cephfs_provisioner_storage_class: cephfs
+cephfs_provisioner_reclaim_policy: Delete
+cephfs_provisioner_claim_root: /volumes
+cephfs_provisioner_deterministic_names: true
 
 # Nginx ingress controller deployment
 ingress_nginx_enabled: false
